tests-integration/fixtures/checking/181_type_application_invalid_basic/Main.snap
---
source: tests-integration/tests/checking2/generated.rs
assertion_line: 28
expression: report
---
Terms

Types
Bad :: ?[cannot apply function type]

Synonyms
type Bad = Int String

Diagnostics
error[InvalidTypeApplication]: Cannot apply type 'Int' to 'String'. 'Int' has kind 'Type', which is not a function kind.
  --> 3:12..3:22
  |
3 | type Bad = Int String
  |            ^~~~~~~~~~
error[CannotUnify]: Cannot unify 'Type' with '?[invalid kind]'
  --> 3:12..3:22
  |
3 | type Bad = Int String
  |            ^~~~~~~~~~
